--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,7 +30,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">页面与文件 <b class="caret"></b></a>
                   <span class="dropdown-arrow"></span>
                   <ul class="dropdown-menu">
-                    <li><a href="/page/page">页面</a></li>
+                    <li><a href="/page">页面</a></li>
                     <li><a href="/page/js">JS</a></li>
                     <li><a href="/page/css">CSS</a></li>
                     <li class="divider"></li>
