--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -33,17 +33,17 @@
                     <li><a href="/page">页面</a></li>
                     <li><a href="/page/js">JS</a></li>
                     <li><a href="/page/css">CSS</a></li>
-                    <li class="divider"></li>
-                    <li><a href="/page/modules">模块</a></li>
-                    <li class="divider"></li>
-                    <li><a href="/page/sprite">CSS Sprite</a></li>
-                    <li class="divider"></li>
-                    <li><a href="/page/libs">Libs</a></li>
-                    <li class="divider"></li>
+                    {{!-- <li class="divider"></li> --}}
+                    {{!-- <li><a href="/page/modules">模块</a></li> --}}
+                    {{!-- <li class="divider"></li> --}}
+                    {{!-- <li><a href="/page/sprite">CSS Sprite</a></li> --}}
+                    {{!-- <li class="divider"></li> --}}
+                    {{!-- <li><a href="/page/libs">Libs</a></li> --}}
+                    {{!-- <li class="divider"></li> --}}
                     {{!--<li><a href="/components/">组件</a></li>
                     <li class="divider"></li>--}}
                     {{!--<li><a href="#">开发文件结构图</a></li>--}}
-                    <li><a href="/page/preview_map">预览文件结构图</a></li>
+                    {{!-- <li><a href="/page/preview_map">预览文件结构图</a></li> --}}
                   </ul>
                 </li>
 
