--- a/views/publish.hbs
+++ b/views/publish.hbs
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-     <div class="modal fade" id="edit_publish_template" style="display:block;">
+     <div class="modal fade" id="edit_publish_template" >
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
