--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,7 +50,7 @@
                 <li><a href="/publish/">发布</a></li>
                 <li><a href="/proxy/">代理服务</a></li>
                 
-                <li class="dropdown">
+                {{!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">更多 <b class="caret"></b></a>
                   <span class="dropdown-arrow"></span>
                   <ul class="dropdown-menu">
@@ -63,7 +63,7 @@
                     <li><a href="/help/">使用帮助</a></li>
                     <li><a href="/help/todo">TO DO</a></li>
                   </ul>
-                </li>
+                </li> --}}
 
                </ul>
                
