--- a/views/page.hbs
+++ b/views/page.hbs
@@ -28,10 +28,10 @@
                      <td>
                         <a href="/preview/{{name}}" target="_blank" class="btn 
                         btn-primary btn-sm"><span class="fui-eye"></span> 预览</a>
-                        <a href="#" class="btn 
-                        btn-success btn-sm change_layout_btn" data-filename="{{filename}}" data-path="{{path}}"><span class="fui-document"></span> 布局页</a>
-                        <a href="#" data-filename="{{filename}}" data-path="{{path}}" class="btn btn-info btn-sm page_data_btn"><span class="fui-list-columned"></span> 模板数据</a>
-                        <a href="/codeview?path={{path}}" target="_blank" class="btn btn-success btn-sm"><span class="fui-document"></span> 源代码</a>
+                        {{!-- <a href="#" class="btn 
+                        btn-success btn-sm change_layout_btn" disabled="disabled" data-filename="{{filename}}" data-path="{{path}}"><span class="fui-document"></span> 布局页</a>
+                        <a href="#" data-filename="{{filename}}" data-path="{{path}}" disabled="disabled" class="btn btn-info btn-sm page_data_btn"><span class="fui-list-columned"></span> 模板数据</a>
+                        <a href="/codeview?path={{path}}" target="_blank" disabled="disabled" class="btn btn-success btn-sm"><span class="fui-document"></span> 源代码</a> --}}
                         {{!-- <a href="javascript:;" data-filepath="{{path}}" class="btn btn-danger btn-sm delete_page_btn"><span class="fui-cross"></span> 删除</a> --}}
                         </td>
                 </tr>
@@ -121,9 +121,9 @@
                     <td>{{showTime mtime}}</td>
                     <td>{{showFileSize size}}</td>
                     <td>
-                        <a href="#" data-filename="{{filename}}" data-path="{{path}}" class="btn btn-info btn-sm page_data_btn">
-                            <span class="fui-list-columned"></span> 模板数据</a>
-                        <a href="/codeview?path={{path}}" target="_blank" class="btn btn-success btn-sm">
+                        {{!-- <a href="#" data-filename="{{filename}}" data-path="{{path}}" class="btn btn-info btn-sm page_data_btn">
+                            <span class="fui-list-columned"></span> 模板数据</a> --}}
+                        <a href="/codeview?path={{path}}" target="_blank" disabled="disabled" class="btn btn-success btn-sm">
                             <span class="fui-document"></span> 源代码</a>
                     </td>
                 </tr>
@@ -184,9 +184,9 @@
                     <td>{{showTime mtime}}</td>
                     <td>{{showFileSize size}}</td>
                     <td>
-                        <a href="#" data-filename="{{filename}}" data-path="{{path}}" class="btn btn-info btn-sm page_data_btn">
-                            <span class="fui-list-columned"></span> 模板数据</a>
-                        <a href="/codeview?path={{path}}" target="_blank" class="btn btn-success btn-sm">
+                        {{!-- <a href="#" data-filename="{{filename}}" data-path="{{path}}" class="btn btn-info btn-sm page_data_btn">
+                            <span class="fui-list-columned"></span> 模板数据</a> --}}
+                        <a href="/codeview?path={{path}}" target="_blank" disabled="disabled" class="btn btn-success btn-sm">
                             <span class="fui-document"></span> 源代码</a>
                     </td>
                 </tr>
