--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,7 +38,7 @@
                     {{!-- <li class="divider"></li> --}}
                     {{!-- <li><a href="/page/sprite">CSS Sprite</a></li> --}}
                     {{!-- <li class="divider"></li> --}}
-                    {{!-- <li><a href="/page/libs">Libs</a></li> --}}
+                    <li><a href="/libs">Libs</a></li>
                     {{!-- <li class="divider"></li> --}}
                     {{!--<li><a href="/components/">组件</a></li>
                     <li class="divider"></li>--}}
