--- a/views/pageCss.hbs
+++ b/views/pageCss.hbs
@@ -85,7 +85,7 @@
             <td>{{showTime mtime}}</td>
             <td>{{showFileSize size}}</td>
             <td>
-            <a href="/codeview?path={{path}}" target="_blank" disabled="disabled" class="btn btn-success btn-sm"><span class="fui-document"></span> 源代码</a>
+            <a href="/codeview?path={{path}}" target="_blank" class="btn btn-success btn-sm"><span class="fui-document"></span> 源代码</a>
             {{#if is_system_file}}
             {{else}}
             {{!-- <a href="javascript:;" data-filepath="{{path}}" class="btn btn-danger btn-sm delete_css_partial_btn"><span class="fui-cross"></span> 删除</a> --}}
