--- a/views/pageJs.hbs
+++ b/views/pageJs.hbs
@@ -23,7 +23,7 @@
         <td>
           <a href="/preview/{{tslink path}}" target="_blank" class="btn 
           btn-primary btn-sm"><span class="fui-eye"></span> 预览</a>
-          {{!-- <a href="/codeview?path={{path}}" target="_blank" disabled="disabled" class="btn btn-success btn-sm"><span class="fui-document"></span> 源代码</a> --}}
+          {{!-- <a href="/codeview?path={{path}}" target="_blank" class="btn btn-success btn-sm"><span class="fui-document"></span> 源代码</a> --}}
           {{!-- <a href="javascript:;" data-filepath="{{path}}" class="btn btn-danger btn-sm delete_js_btn"><span class="fui-cross"></span> 删除</a> --}}
         </td>
       </tr>
