添加模块界面

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,7 +34,7 @@
                     <li><a href="/page/js">JS</a></li>
                     <li><a href="/page/css">CSS</a></li>
                     {{!-- <li class="divider"></li> --}}
-                    {{!-- <li><a href="/page/modules">模块</a></li> --}}
+                    <li><a href="/modules">模块</a></li>
                     {{!-- <li class="divider"></li> --}}
                     {{!-- <li><a href="/page/sprite">CSS Sprite</a></li> --}}
                     {{!-- <li class="divider"></li> --}}
