--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -36,7 +36,7 @@
                     {{!-- <li class="divider"></li> --}}
                     <li><a href="/modules">模块</a></li>
                     {{!-- <li class="divider"></li> --}}
-                    {{!-- <li><a href="/page/sprite">CSS Sprite</a></li> --}}
+                    <li><a href="/sprite">CSS Sprite</a></li>
                     {{!-- <li class="divider"></li> --}}
                     <li><a href="/libs">Libs</a></li>
                     {{!-- <li class="divider"></li> --}}
